# deep-research-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.sh  test_direct.py  test_research_tool.py  test_research_tool_simple.py  test_tool_args_logging.py  test_web_search.py
example_user_context/: phone_case_drop-shipping.json
examples/: chunked_scraping_example.py
src/: agent_memory.py  chatbot_manager.py  custom_session.py  globals.py  main.py  manager.py  research_manager.py  test_manager.py
src/agents/: chatbot_agent.py  clarification_agent.py  planner_agent.py  preplan_agent.py  research_agent.py  research_planner_agent.py  response_agent.py  search_plan_agent.py  triage_agent.py
src/agents/tools/: plan_summarizer_tool.py  plan_writer_tool.py  report_writer_tool.py  research_tool.py  search_plan_tool.py  simple_report_tool.py
src/agents/tools/planner/: plan_summarizer_tool.py  plan_writer_tool.py
src/agents/tools/research/: report_writer_tool.py  research_tool.py  search_plan_tool.py  simple_report_tool.py
src/main_agents/: coordinator_agent.py  planner_agent.py  research_agent.py  triage_agent.py
src/sample_outputs/: 7-31-25_gpt-4.1_banana_bliss_research_plan.md  banana_bliss_research_plan.md
src/tool_agents/: __init__.py
src/tool_agents/planner/: __init__.py  plan_summarizer_tool.py  plan_writer_tool.py
src/tool_agents/research/: __init__.py  contextual_summary_tool.py  query_writer_tool.py  report_writer_tool.py  research_tool.py  simple_report_tool.py
src/tools/: researcher_tool.py  web_search_tool.py
src/tools/scraper/: README.md  WEB_SCRAPER_README.md  __init__.py  chunked_scraper.py  chunking.py  page_scraper.py  simple_scraper.py
src/tools/web_scraper/: __init__.py  web_scraper.py
tests/: README.md  conftest.py  run_all_tests.py
tests/main_agents/: test_research_agent.py
tests/tool_agents/planner/: test_plan_summarizer_tool.py  test_plan_writer_tool.py
tests/tool_agents/research/: test_contextual_summary_tool.py  test_query_writer_tool.py  test_report_writer_tool.py  test_research_tool.py
tests/tools/: test_researcher.py  test_web_search.py  test_web_search_components.py  test_web_search_tool.py
tests/tools/scraper/: test_chunking.py  test_page_scraper.py  test_simple_scraper.py
tests/tools/web_scraper/: __init__.py  test_web_scraper.py
